user auth & jwt integration
